[808] Add job for rcptt tests
bug: 808 

Change-Id: Ibb1e002caaa125e71dbb53858b0591cba1daf8df
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>