@@ -321,7 +321,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,run,import_tests_projects,Resource_Reuse" />
+	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,import_tests_projects,Resource_Reuse" />
 	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
@@ -422,45 +422,5 @@ This file was generated by Eclipse EGF
 
 </target> 
 
-
-
-	<target name="run">
-		<antcall target="test"/>
-	</target>
-
-<target name="test">
-		<java jar="${tools}/rcptt/eclipse/plugins/org.eclipse.equinox.launcher_1.3.100.v20150511-1540.jar" fork="true">
-			<arg value="-application" />      
-			<arg value="org.eclipse.rcptt.runner.headless" />
-
-			<arg value="-data" />
-			<arg value="${runner-workspace}" />
-
-			<arg value="-aut" />      
-			<arg value="${aut-path}" />
-
-			<arg value="-autWsPrefix" />      
-			<arg value="${aut-workspace}" />
-	   
-			<arg value="-autConsolePrefix" />
-			<arg value="${aut-stdout}"/>
-			
-			<arg value="-htmlReport" />
-			<arg value="${html-report}" />
-			
-			<arg value="-junitReport" />
-			<arg value="${junit-report}" />
-
-			<arg value="-import" />
-			<arg value="${test-location}" />
-
-			<arg value="-testOptions" />      
-			<arg value="testExecTimeout=300;execTimeout=3600" />
-			
-			<arg value="-autVMArgs" />      
-			<arg value="-Dosgi.requiredJavaVersion=1.7;-Dorg.eclipse.swt.browser.DefaultType=mozilla;-Xms1000m;-Xmx3000m;-XX:PermSize=128m;-XX:MaxPermSize=512m" />
-
-		</java>
-	</target>
 
 </project>
